--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,6 +10,7 @@ pipeline {
       //  Ensures Java 17 is used
       JAVA_HOME = '/opt/java/openjdk'
       PATH = "/opt/java/openjdk/bin:$PATH"
+      ORG_GRADLE_JAVA_INSTALLATIONS_AUTO_DOWNLOAD = 'false'
   }
 
   stages {
