--- a/build.gradle
+++ b/build.gradle
@@ -62,11 +62,11 @@ plugins {
 }
 
 java {
-    toolchain 7
+    toolchain {
         languageVersion.set(JavaLanguageVersion.of(17))
-	
     }
 }
+
 
 // Configure our javadoc to include an overview for our project, a
 // document that provides general ideas of the whole.
