--- a/build.gradle
+++ b/build.gradle
@@ -124,7 +124,7 @@ gretty {
 }
 
 repositories {
-    jcenter()
+    //jcenter()
     mavenCentral()
 }
 
@@ -150,7 +150,7 @@ dependencies {
     // for equals and hashcode are met.  It's very strict.  Because it's very
     // strict, it forces us to create very safe, very solid code.
     // https://mvnrepository.com/artifact/nl.jqno.equalsverifier/equalsverifier
-    testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.14.5'
+    testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.14.7'
 
     testImplementation 'io.cucumber:cucumber-java:5.7.0'
     testImplementation 'io.cucumber:cucumber-junit:5.7.0'
