--- a/build.gradle
+++ b/build.gradle
@@ -277,6 +277,7 @@ sonarqube {
         property "sonar.coverage.jacoco.xmlReportPaths", "build/jacoco/jacoco.xml"
         property "sonar.login", "admin"
         property "sonar.password", "password"
+	property "sonar.host.url", "http://host.docker.internal:9000"
     }
 }
 
