--- a/build.gradle
+++ b/build.gradle
@@ -653,7 +653,7 @@ task runPerfTests(type:Exec) {
     workingDir '.'
 
     // on mac 
-    commandLine 'sh', '-c', '/usr/bin/jmeter -f -n -t docs/performance_testing/50_users_at_once.jmx -l build/jmeter_perf_test.csv -e -o build/reports/perf_report'
+    commandLine 'sh', '-c', 'jmeter -f -n -t docs/performance_testing/50_users_at_once.jmx -l build/jmeter_perf_test.csv -e -o build/reports/perf_report'
 
     //store the output instead of printing to the console:
     standardOutput = new ByteArrayOutputStream()
