--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -135,11 +135,8 @@ pipeline {
       stage('Performance Tests') {
         steps {
           sh '''
-            # Download and extract JMeter locally (no install required)
-            curl -s https://downloads.apache.org/jmeter/binaries/apache-jmeter-5.6.2.tgz
+            curl -s https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-5.6.2.tgz
             tar -xzf jmeter.tgz
-      
-            # Add local JMeter bin to PATH for this shell session
             export PATH=$PWD/apache-jmeter-5.6.2/bin:$PATH
       
             # Run your existing Gradle performance task
