--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -130,20 +130,23 @@ pipeline {
     //   steps {
     //     sh './gradlew runPerfTests'
     //   }
-    // }
-    // Performance testing with JMeter
+      // }
       stage('Performance Tests') {
         steps {
           sh '''
-            curl -s https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-5.6.2.tgz
+            # Download and extract JMeter
+            curl -s https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-5.6.2.tgz -o jmeter.tgz
             tar -xzf jmeter.tgz
+      
+            # Add JMeter to PATH
             export PATH=$PWD/apache-jmeter-5.6.2/bin:$PATH
       
-            # Run your existing Gradle performance task
+            # Run your Gradle performance test
             ./gradlew runPerfTests
           '''
         }
-      }
+    }
+
 
 
     // Mutation testing to assess test coverage quality
