--- a/build.gradle
+++ b/build.gradle
@@ -291,6 +291,7 @@ task runApiTests(type: Exec) {
     }
     workingDir 'src/api_tests'
     commandLine 'pipenv', 'run', 'pytest', '--junitxml', '../../build/test-results/api_tests/TEST-api_test_results.xml'
+    ignoreExitValue = true
 }
 
 static boolean SearchDirectoryForChromedriver(File dir) {
