--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -31,6 +31,7 @@ pipeline {
       }
       post {
         always {
+          catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
           junit 'build/test-results/test/*.xml'
         }
       }
