--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
     }
 
     // Unit tests
-    // test test test 
+    // test  
     stage('Unit Tests') {
       steps {
         sh './gradlew test'
