--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
   stages {
 
     // Build the binary
-    // test
+    // test test 
     stage('Build') {
       steps {
         //  Confirm Java version being used
