--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
 
   stages {
 
-    // Build the binary // test test 
+    // Build the binary // test test test 
     stage('Build') {
       steps {
         //  Confirm Java version being used
